@@ -1,0 +1,4 @@
+
+*.exe
+save_loc.txt
+save_loc.txt
